# crpg

./: CMakeLists.txt  Makefile
include/: crpg_config.hpp.in
include/actor/: abilities.hpp
include/utility/: dice.hpp  utility.hpp
prototyp/: abilities.h  point_buy.h  roll.cpp  roll.h  std_array.cpp  std_array.h  util.cpp  util.h
prototype/: abilities.cpp
prototype/v1/: point_buy.cpp  test_random.cpp
prototype/v2/: Makefile
prototype/v2/src/Abilities/: Abilities.cpp  Abilities.h
prototype/v2/src/Dice/: Dice.cpp
prototype/v2/test/Abilities/: testAbilities
prototype/v2/test/Dice/: testDice
src/: main.cpp
src/Abilities/: Abilities.cpp  Abilities.h  test.cpp
src/Dice/: Dice.cpp  Dice.h  main.cpp  test.cpp
src/utility/: CMakeLists.txt  dice.cpp
test/: CMakeLists.txt  test_dice.cpp
test/Dice/: testDice
